syntax = "proto3";

package notesPackage;

service NoteService {
    rpc listAll (Empty) returns (NoteList) {}
    rpc get (NoteRequestId) returns (Note) {}
    rpc insert (Note) returns (Note) {}
    rpc update (Note) returns (Note) {}
    rpc deletes (NoteRequestId) returns (Empty) {}
    rpc listStream (Empty) returns (stream Note) {}
}

message Empty {}

message Note {
    string id = 1;
    string title = 2;
    string content = 3;
}

message NoteList {
    repeated Note notes = 1;
}

message NoteRequestId {
    string id = 1;
}
